--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
         <i class="bx bxl-blogger"></i><span>PeanutStick</span>
       </div>
       <nav class="sidebar-nav">
-        <div class="home-box">
-          <a id="home-bg" href="#" class="sidebar-item">
+          <a href="#" class="sidebar-item">
             <i class="bx bx-home-alt"></i><span class="sidebar-home">Homepage</span>
           </a>
-        </div>
         <br />
         <p class="title-xta">Pentesting</p>
         <br />
