--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </nav>
     </aside>
 
-    <main class="main hidden">
+    <main class="main">
       <h1>Home</h1>
       <p>Home page</p>
     </main>
