--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <i class="bx bxl-blogger"></i><span>PeanutStick</span>
       </div>
       <nav class="sidebar-nav">
-          <a href="#" class="sidebar-item">
+          <a href="#" class="sidebar-item active">
             <i class="bx bx-home-alt"></i><span class="sidebar-home">Homepage</span>
           </a>
         <br />
