--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.0.7/css/boxicons.min.css"/>
     <link rel="stylesheet" href="./assets/css/cloud.css" />
+    <meta name="description" content="This is for Red / Blue Teaming we also have good cheatsheets!">
+    <meta property="og:image"
+        content="https://media.discordapp.net/attachments/1065847244336676967/1087175622201184286/cloud-solid-240.png">
     <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1065847244336676967/1087175622201184286/cloud-solid-240.png"/>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
-    <title>PeanutStick Blog</title>
+    <title>Gast & PeanutStick Blog</title>
   </head>
 
   <body>
 
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <i class="bx bxl-blogger"></i><span>PeanutStick</span>
+        <i class="bx bxl-blogger"></i><span>Gast & PeanutStick</span>
       </div>
       <nav class="sidebar-nav">
           <a href="#" class="sidebar-item">
@@ -118,6 +121,7 @@ praesentium natus aperiam!</code></pre>
 
         <div class="container">
           <ul>
+            <li><a class="link-point" href="#TTY">TTY Shells</a></li>
             <li><a class="link-point" href="#Windows">Windows</a></li>
             <li><a class="link-point" href="#Linux">Linux</a></li>
             <li><a class="link-point" href="#Website">Website</a></li>
@@ -125,7 +129,7 @@ praesentium natus aperiam!</code></pre>
           </ul>
         </div>
 
-        <div class="section-body" id="Linux">
+        <div class="section-body" id="TTY">
 
           <h1 class="section-title">TTY Shells</h1>
           <p>Python2</p>
