--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 				<li class="dropdown">
 					<a class="nav-but" href="#"><i class="bx bx-menu"></i></a>
 					<div class="dropdown-content">
-						<a target="_blank" href="https://discord.com/users/621713529543720970"><i class='bx bxs-contact'></i> Contact Me</a>
-						<a target="_blank" href="https://github.com/birdlinux?tab=repositories"><i class='bx bx-network-chart'></i> Projects</a>
+						<a target="_blank" href="https://discord.com/users/621713529543720970"><i
+								class='bx bxs-contact'></i> Contact Me</a>
+						<a target="_blank" href="https://github.com/birdlinux?tab=repositories"><i
+								class='bx bx-network-chart'></i> Projects</a>
 					</div>
 				</li>
 			</ul>
@@ -37,6 +39,9 @@
 		<!-- 0 -->
 		<div class="projects-section">
 			<div class="project">
+				<div class="right-section">
+					<img class="img-engine" src="./img/pfp.png" alt="" />
+				</div>
 				<div class="left-section">
 					<div class="v-stack max-width">
 						<div class="v-space small"></div>
@@ -51,31 +56,36 @@
 							Learning, Software Engineering, and Robotics. My goal is to work as a Security Researcher at
 							organizations like NSA or IC3 or as a Junior Software Engineer at Google, Facebook, or
 							Apple.</p>
-						<a target="_blank" href="https://discord.com/users/621713529543720970"> <button class="primary-butt" disabled>Contact Me</button></a>
+						<a target="_blank" href="https://discord.com/users/621713529543720970"> <button
+								class="primary-butt" disabled>Contact Me</button></a>
 					</div>
 				</div>
 
-				<div class="right-section">
-					<img class="img-engine" src="./img/pfp.png" alt="" />
-				</div>
+
 			</div>
 		</div>
 
 		<div class="projects-section">
 			<div class="social">
 				<div class="background-social">
-					<a class="dsc-icon social-icons" target="_blank" href=""><i class='bx bxl-discord'></i><span class="social-text">Birdlinux#0001</span></a>
+					<a class="dsc-icon social-icons" target="_blank" href=""><i class='bx bxl-discord'></i><span
+							class="social-text">Birdlinux#0001</span></a>
 				</div>
 
 				<div class="background-social">
-					<a class="social-icons" target="_blank" href="https://discord.com/users/621713529543720970"><i class='bx bxl-discord-alt'></i></a>
-					<a class="social-icons" target="_blank" href="https://instagram.com/herspecter"><i class='bx bxl-instagram'></i></a>
-					<a class="social-icons" target="_blank" href="https://twitter.com/b1rdlinux"><i class='bx bxl-twitter' ></i></a>
+					<a class="social-icons" target="_blank" href="https://discord.com/users/621713529543720970"><i
+							class='bx bxl-discord-alt'></i></a>
+					<a class="social-icons" target="_blank" href="https://instagram.com/herspecter"><i
+							class='bx bxl-instagram'></i></a>
+					<a class="social-icons" target="_blank" href="https://twitter.com/b1rdlinux"><i
+							class='bx bxl-twitter'></i></a>
 				</div>
 
 				<div class="background-social">
-					<a class="social-icons" target="_blank" href="https://github.com/birdlinux"><i class='bx bxl-github'></i></a>
-					<a class="social-icons" target="_blank" href="https://tryhackme.com/p/0xGast"><i class='bx bx-laptop'></i></a>
+					<a class="social-icons" target="_blank" href="https://github.com/birdlinux"><i
+							class='bx bxl-github'></i></a>
+					<a class="social-icons" target="_blank" href="https://tryhackme.com/p/0xGast"><i
+							class='bx bx-laptop'></i></a>
 				</div>
 			</div>
 		</div>
