--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<title>Birdlinux</title>
 	<link rel="stylesheet" href="./css/style.css" />
 	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+	<link rel="icon" href="https://media.discordapp.net/attachments/1086433077196230676/1109663294605774878/favicon.png?width=677&height=677" type="image/png">
+	<meta property="og:title" content="Hi, I'm Birdlinux">
+	<meta property="og:description" content="Im an 18 y/o Cyber Security enthusiast">
+	<meta property="og:image" content="https://media.discordapp.net/attachments/1086433077196230676/1109663294605774878/favicon.png?width=677&height=677">
+	
 </head>
 
 <body>
