--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
 	<title>Birdlinux</title>
 	<link rel="stylesheet" href="./css/style.css" />
 	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-	<link rel="icon" href="https://media.discordapp.net/attachments/1086433077196230676/1109663294605774878/favicon.png?width=677&height=677" type="image/png">
-	<meta property="og:title" content="Hi, I'm Birdlinux">
-	<meta property="og:description" content="Im an 18 y/o Cyber Security enthusiast">
-	<meta property="og:image" content="https://media.discordapp.net/attachments/1086433077196230676/1109663294605774878/favicon.png?width=677&height=677">
-	
 </head>
 
 <body>
@@ -73,12 +68,12 @@
 		<div class="projects-section">
 			<div class="social">
 				<div class="background-social">
-					<a class="dsc-icon social-icons" target="_blank" href=""><i class='bx bxl-discord'></i><span
-							class="social-text">Birdlinux#0001</span></a>
+					<a class="dsc-icon social-icons" target="_blank" href=""><i class='bx bxs-file'></i><span
+							class="social-text">Resume</span></a>
 				</div>
 
 				<div class="background-social">
-					<a class="social-icons" target="_blank" href="https://discord.com/users/621713529543720970"><i
+					<a class="social-icons" target="_blank" href="https://discord.com/users/889145879582375987"><i
 							class='bx bxl-discord-alt'></i></a>
 					<a class="social-icons" target="_blank" href="https://instagram.com/herspecter"><i
 							class='bx bxl-instagram'></i></a>
