--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="projects-section">
 			<div class="social">
 				<div class="background-social">
-					<a class="dsc-icon social-icons" target="_blank" href="http://gastsecurity.space/files/Resume.pdf"><i class='bx bxs-file'></i><span
+					<a class="dsc-icon social-icons" target="_blank" href="https://raw.githubusercontent.com/birdlinux/birdlinux.github.io/main/files/Resume.pdf"><i class='bx bxs-file'></i><span
 							class="social-text">Resume</span></a>
 				</div>
 
